--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "site-portfolio",
+  "homepage": "https://kawearaujo.github.io/site-portfolio/",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "npm run build && gh-pages -d dist",
+    "predeploy": "rm -rf dist"
   },
   "dependencies": {
     "axios": "^1.3.2",
@@ -21,6 +24,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "gh-pages": "^5.0.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
