--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "axios": "^1.3.2",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
-    "vue-router": "^2.8.1"
+    "vue-pagination-2": "^3.1.0",
+    "vue-router": "^2.8.1",
+    "vuejs-paginate": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
