--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "site-portfolio",
-  "homepage": "https://kawearaujo.github.io/site-portfolio/",
+  "name": "kawe-pokeapi",
+  "homepage": "https://kawearaujo.github.io/kawe-pokeapi/",
   "version": "0.1.0",
   "private": true,
   "scripts": {
