--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "axios": "^1.3.2",
+    "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
+    "jquery": "^3.6.4",
     "vue": "^2.6.14",
     "vue-pagination-2": "^3.1.0",
     "vue-router": "^2.8.1",
